# pycommons

./: .gitignore  .pre-commit-config.yaml  .safety-project.ini  .variables  README.md  helper.sh  pyproject.toml  unit-tests-results.xml
.github/workflows/: pipeline.yml
src/tgedr/pycommons/: entrypoint.py
src/tgedr/pycommons/data/: processing.py
src/tgedr_pycommons/data/: processing.py
src/tgedr_pycommons/utils/: reflection.py  singleton.py
tests/: conftest.py
tests/tgedr/pycommons/: test_entrypoint.py
tests/tgedr/pycommons/cicd/: test_entrypoint.py
tests/tgedr/pycommons/data/: test_processing.py
tests/tgedr_pycommons/: classes.py
tests/tgedr_pycommons/cicd/: test_entrypoint.py
tests/tgedr_pycommons/data/: test_processing.py
tests/tgedr_pycommons/utils/: impls.py  test_reflection.py  test_singleton.py
